Fixing scroll bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,13 @@ img {
   }
 }
 
+@media screen and (max-width: 404px) {
+  .container {
+    max-width: 404px;
+    padding: 0 1rem;
+  }
+}
+
 /* Animations */
 .scale-up-center {
   -webkit-animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1)
