--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -7,7 +7,6 @@
 @media screen and (max-width: 590px) {
   .projects__container {
     padding-top: 8rem;
-    margin: 0 auto;
-    max-width: 1000px;
+    max-width: 580px;
   }
 }
