--- a/src/index.css
+++ b/src/index.css
@@ -23,4 +23,5 @@ body {
   font-size: 16px;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
